--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_svg: ^2.0.16
   intl_phone_field: ^3.2.0
   flutter_otp_text_field: ^1.2.0
+  auto_route: ^10.0.1
 #  firebase_auth: ^5.4.2
 #  cloud_firestore: ^5.6.3
 #  firebase_messaging: ^15.2.2
