--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   firebase_messaging: ^15.2.2
   flutterfire_cli: ^1.0.1
   firebase_core: ^3.11.0
+  cloud_functions: ^5.4.0
+  crypto: ^3.0.6
+
+
 
 
 dev_dependencies:
