--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ dependencies:
   intl_phone_field: ^3.2.0
   flutter_otp_text_field: ^1.2.0
   auto_route: ^10.0.1
-  firebase_messaging: ^15.2.2
-  flutterfire_cli: ^1.0.1
-  firebase_core: ^3.11.0
   crypto: ^3.0.6
   dio: ^5.8.0+1
+#  drift: ^2.26.1
+#  sqlite3_flutter_libs: ^0.5.32
+#  path_provider: ^2.1.5
+#  path: ^1.9.0
+
 
 
 
@@ -43,7 +45,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
