--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.3.3
   uuid: ^4.5.1
+  timelines_plus: ^1.0.7
 
 #  drift: ^2.26.1
 #  sqlite3_flutter_libs: ^0.5.32
